--- a/WebContent/views/desktop/administracion/difusion/notificaciones/catalogoActividad.zul
+++ b/WebContent/views/desktop/administracion/difusion/notificaciones/catalogoActividad.zul
@@ -3,21 +3,21 @@
 		action="show: slideIn;hide: slideOut"
 		use="karen.core.dialog.catalogue.list_pagination.controllers.C_ListPaginationCatalogueDialog"
 		apply="org.zkoss.bind.BindComposer"
-		viewModel="@id('vm') @init('ve.smile.administracion.difusion.notificaciones.viewmodels.VM_CatalogoUsuario', dialogData=arg.get('dialogData'))">
-		<caption label="USUARIOS" style="margin-left: 40%;" />
+		viewModel="@id('vm') @init('ve.smile.administracion.difusion.notificaciones.viewmodels.VM_CatalogoActividad', dialogData=arg.get('dialogData'))">
+		<caption label="ACTIVIDADES PLANIFICADAS" style="margin-left: 40%;" />
 		<separator height="20px"></separator>
-		<n:h6 style="margin-left: 5%;"> Por favor seleccione los usuarios a ser notificados</n:h6>
+		<n:h6 style="margin-left: 5%;"> Por favor seleccione la actividad planificada</n:h6>
 		<separator height="20px"></separator>
-		<listbox id="listbox" model="@load(vm.objectList)" selectedItem="@bind(vm.selectedObject)" multiple="true"  style="width: 90%; margin-left: 5%;padding-bottom: 5%;" checkmark="true">
+		<listbox id="listbox" model="@load(vm.objectList)" selectedItem="@bind(vm.selectedObject)" style="width: 90%; margin-left: 5%;padding-bottom: 5%;" checkmark="true">
 			<listhead sizable="true">
-				<listheader label="Correo" />
-				<listheader label="Rol" />
+				<listheader label="Actividad" />
+				<listheader label="Fecha planificada" />
 			</listhead>
 			<template name="model">
 				<listitem>
 					<listcell style="width: 10%"/>
-					<listcell label="@load(each.correo)" />
-					<listcell label="@load(each.fkRol.nombre)" />
+					<listcell label="@load(each.fkActividad.nombre)" />
+					<listcell label="@load(each.fechaPlanificadaDate)" />
 				</listitem>
 			</template>
 			<listfoot>
