--- a/WebContent/views/desktop/administracion/portalweb/galeria/album/addMultimedia.zul
+++ b/WebContent/views/desktop/administracion/portalweb/galeria/album/addMultimedia.zul
@@ -35,6 +35,28 @@
 </style>
 <!-- 	<div sclass="animated fadeInLeft" apply="ve.smile.administracion.portalweb.galeria.album.uploadfield"> -->
 	<div sclass="animated fadeInLeft">
+		<div sclass="row">
+			<div sclass="col s12">
+				<div class=" col s12">
+					<div sclass="row">
+						<div sclass="col s12" align="center">
+							<div sclass="col s12" align="center">
+								<label sclass="titulo-evento"
+									value="@bind(vm.album.titulo)">
+								</label>
+
+								<div sclass="row">
+									<label sclass="descripcion-evento"
+										value="@bind(vm.album.descripcion)">
+
+									</label>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>		
 		<div class="row">
 			<div class="col s12 fotos" align="center" style="margin-bottom: 15px;">
 				<div sclass="row">
