--- a/WebContent/views/desktop/administracion/portalweb/galeria/album/registroAlbum.zul
+++ b/WebContent/views/desktop/administracion/portalweb/galeria/album/registroAlbum.zul
@@ -2,6 +2,28 @@
 	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 	<div sclass="animated fadeInLeft">
+		<div sclass="row">
+			<div sclass="col s12">
+				<div class=" col s12">
+					<div sclass="row">
+						<div sclass="col s12" align="center">
+							<div sclass="col s12" align="center">
+								<label sclass="titulo-evento"
+									value="@bind(vm.selectedObject.fkEvento.nombre)">
+								</label>
+
+								<div sclass="row">
+									<label sclass="descripcion-evento"
+										value="@bind(vm.selectedObject.fkEvento.descripcion)">
+
+									</label>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>	
 		<div class="row">
 			<div class="col s12">
 			
@@ -59,7 +81,7 @@
 					</div>
 				</div>
 				
-				<popup id="pop_titulo," width="200px">
+				<popup id="pop_titulo" width="200px">
         			<html>
         				<![CDATA[Por favor, ingrese el titulo del album que desea registrar.<br/>]]>
         			</html>
