--- a/WebContent/views/desktop/gestion/evento/ejecucion/actualizarAsistencia/tareaParticipantes.zul
+++ b/WebContent/views/desktop/gestion/evento/ejecucion/actualizarAsistencia/tareaParticipantes.zul
@@ -1,90 +1,55 @@
-<?xel-method prefix="m" name="getBufferedImage" class="lights.smile.util.Zki" 
-	signature="java.awt.image.BufferedImage getBufferedImage(java.lang.String)" ?>
+<?xel-method prefix="m" name="getUrlWeb" class="lights.smile.util.Zki" 
+	signature="java.lang.String getUrlWeb(java.lang.String)" ?>
+<?xel-method prefix="m" name="convertirLongADate" class="lights.smile.util.UtilConverterDataList" 
+	signature="java.lang.String convertirLongADate(java.lang.Long)" ?>
 <zk xmlns:n="native" xmlns:w="client">
 <div sclass="row section animated fadeInLeft">
 
-	<style>
+<style>
+		.z-auxheader-content, .z-auxheader-content:hover { background:
+		#594e46 !important; border-right: none; height: 41px; color:
+		white; }
 
-		.z-grid-emptybody td { font-family: Roboto; font-size: 13px;
-		font-weight: normal; font-style: normal; color: #aaa;
-		font-style: italic; text-align: center; height: 1px; padding:
-		6px !important; }
+		.switch .z-checkbox input[type="checkbox"]:checked + label {
+		background-color: #0086a4; }
 
-		.z-grid .z-column-content { font-family: 'Roboto'; font-size:
-		13px; color: #ffffff; background: #8d7a6f; }
-
-		tr.row-vacaciones { border-bottom: 1px solid #CFCFCF;
-		background: #ffffff; }
+		.switch .z-checkbox input[type="checkbox"]:checked +
+		label::after { background-color: #0086a4; }
 
 
-		.z-row .z-detail-outer { width: 40px; min-width: 40px;
-		border-top: 1px solid #cfcfcf; padding: 18px 6px; line-height:
-		normal; background: transparent !important; vertical-align: top;
-		}
+		.z-listitem.z-listitem-selected>.z-listcell>.z-listcell-content
+		label, .z-treerow-selected>.z-treecell>.z-treecell-content
+		label{color: #ffffff !important; }
 
+		.z-listitem:hover>.z-listcell>.z-listcell-content label,
+		.z-treerow:hover>.z-treecell>.z-treecell-content label,
+		.z-treerow-selected:hover>.z-treecell>.z-treecell-content label,
+		.z-listitem.z-listitem-selected:hover>.z-listcell>.z-listcell-content
+		label {color: #594e46 !important;}
 
-		.z-auxhead:hover .z-auxheader-content { background: #EEEEEE
-		!important; }
-
-
-		.z-auxheader-content { background: #EEEEEE !important;
-		border-right: 1px solid #E5F4FB; height: 41px; }
-
-		.z-detail { font-size: 14px; width: 16px; height: 16px; border:
-		none !important; padding: 0; line-height: 14px; background:
-		transparent !important; text-align: center; overflow: hidden;
-		white-space: nowrap; cursor: pointer; }
-
-		.z-columns th:first-child { border-left: none; border-right:
-		none !important; }
-
-		.z-row .z-detail-outer+td, .z-row .z-detail-inner :first-child {
-		border-left: none; }
-
-		tr.header-periodo-disfute { background-color: rgba(192, 192,
-		193, 0.27); }
-
-
-		.z-messagebox .z-label { font-family: 'Roboto'; font-size: 15px
-		!important; color: #363636; }
-
-		.z-cell .vacacion { background-color: #fff !important;
-		border-left: 1px solid #cfcfcf !important; }
-
-		.z-cell .periodo { background-color: #fff !important; }
-
-		.z-grid .vacacion { border: 1px solid rgba(128, 128, 128, 0.33)
-		!important; }
-
-		.z-grid-odd>.z-row-inner, .z-grid-odd>.z-cell { background:
-		#FFFFFF !important; }
-
-		.z-foot .vacacion { background-color: rgb(238, 238, 238)
-		!important; }
-
-		.z-grid.periodo>div.z-grid-body { overflow: auto; max-height:
-		500px !important; }
-
+		.z-button{ background-image: none;} .z-button[disabled] { color:
+		#594e46 !important; }
 	</style>
 	<div sclass="col s12">
 	<div sclass="row">
 			<div sclass="col s12">
 				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
-				<div class=" col s12">
-					<div sclass="row"
-						style="margin:0px;background: #FFF">
-
+					<div sclass="row">
 						<div sclass="col s3">
 							<n:br></n:br>
 							<n:br></n:br>
-							<image class="img-responsive center-block"
-								src="/imagenes/portal/icon/icon-bingo.png" width="128px"
-								height="128px">
-							</image>
 							<n:br></n:br>
-						</div>
+								<n:br></n:br>
+								<div align="center"
+									visible="@load(not empty vm.selectedObject.fkMultimedia and not empty vm.selectedObject.fkMultimedia.url)">
+									<image
+										class="img-responsive circle center-block"
+										src="${m:getUrlWeb(vm.selectedObject.fkMultimedia.url)}"
+										width="128px" height="128px">
+									</image>
+								</div>
+								<n:br></n:br>
+							</div>
 						<div sclass="col s9" align="center">
 							<div sclass="col s12" align="center">
 								<label sclass="titulo-evento"
@@ -106,12 +71,26 @@
 										style="padding:0px">
 
 										<label
-											sclass="info-titulo-evento">
-											Fecha:
-										</label>
-										<label
-											sclass="info-descripcion-evento" value="">
-										</label>
+												sclass="info-titulo-evento">
+												Fecha Inicio:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaInicio)}">
+
+											</label>
+											<label
+												sclass="info-descripcion-evento" value="        ">
+											</label>
+											<label
+												sclass="info-titulo-evento">
+												Fecha Fin:
+											</label>
+											<label
+												sclass="info-descripcion-evento"
+												value="${m:convertirLongADate(vm.selectedObject.fechaFin)}">
+
+											</label>
 										<n:br></n:br>
 										<label
 											sclass="info-titulo-evento">
@@ -150,9 +129,6 @@
 						</div>
 					</div>
 				</div>
-				<div class=" col s12">
-					<div class=" row line-evento" style="margin:0px"></div>
-				</div>
 			</div>
 		</div>
 		<separator height="20px"></separator>
@@ -187,58 +163,75 @@
 										emptyMessage="No hay voluntarios asociados a las actividades"
 										model="@bind(tarea.listPlanTareaVoluntarios)">
 										<auxhead>
-											<auxheader colspan="4"
+											<auxheader colspan="6"
 												align="center" label="VOLUNTARIOS ASOCIADOS">
 											</auxheader>
 										</auxhead>
 										<columns
-											sclass="header-periodo-disfute">
-											<column label=""
-												width="21%" />
-											<column label="Cédula/Rif"
-												width="20%" />
-											<column label="Voluntario"
-												align="center" width="20%" />
-											<column label="Ejecuto"
-												align="center" width="20%" />
+												sclass="header-periodo-disfute">
+										<column label=""
+													width="10%" />
+												<column
+													label="Cédula/Rif" width="10%" />
+												<column
+													label="Voluntario" align="center" width="30%" />
+												<column label="Correo"
+													align="center" width="20%" />
+												<column label="Teléfono"
+													align="center" width="15%" />
+												<column
+													label="Ejecución" width="15%" align="center">
+												</column>
 										</columns>
 										<template name="model">
 											<row sclass="last">
 
-												<cell
-													sclass="vacacion">
-													<!-- 										<div align="center" -->
-													<!-- 											visible="@bind(not empty each.fkVoluntario.fkPersona.fkMultimedia)"> -->
-													<!-- 											<image -->
-													<!-- 												content="${m:getBufferedImage(each.fkVoluntario.fkPersona.fkMultimedia.url)}" -->
-													<!-- 												width="30px" height="30px" sclass="circle"> -->
-													<!-- 											</image> -->
-													<!-- 										</div> -->
-												</cell>
+											
+													<cell
+														sclass="vacacion">
+														<div
+															align="center">
+															<image
+																src="${m:getUrlWeb(each.fkVoluntario.fkPersona.fkMultimedia.url)}"
+																width="30px" height="30px" sclass="circle">
+															</image>
+														</div>
+													</cell>
 
-												<cell
-													sclass="vacacion">
-													<label
-														value="@bind(each.fkVoluntario.fkPersona.identificacion)" />
-												</cell>
+													<cell
+														sclass="vacacion">
+														<label
+															value="@bind(each.fkVoluntario.fkPersona.identificacion)" />
+													</cell>
 
-												<cell
-													sclass="vacacion">
-													<label
-														value="@bind(each.fkVoluntario.fkPersona.nombre.concat(' ').concat(each.fkVoluntario.fkPersona.apellido))" />
-												</cell>
-												<cell>
-												<n:div
-														class="switch">
-														<n:label>
-															NO
-															<checkbox
-																checked="@bind(each.ejecucion)">
-															</checkbox>
-															SI
-														</n:label>
-													</n:div>
-												</cell>
+													<cell
+														sclass="vacacion">
+														<label
+															value="@bind(each.fkVoluntario.fkPersona.nombre.concat(' ').concat(each.fkVoluntario.fkPersona.apellido))" />
+													</cell>
+													<cell
+														sclass="vacacion">
+														<label
+															value="@bind(each.fkVoluntario.fkPersona.correo)" />
+													</cell>
+													<cell
+														sclass="vacacion">
+														<label
+															value="@bind(each.fkVoluntario.fkPersona.telefono1)" />
+													</cell>
+													<cell>
+														<n:div
+															class="switch">
+															<n:label
+																style=" font-size: 16px;">
+																NO
+																<checkbox
+																	checked="@bind(each.ejecucion)">
+																</checkbox>
+																SI
+															</n:label>
+														</n:div>
+													</cell>
 											</row>
 										</template>
 									</grid>
@@ -289,49 +282,75 @@
 										emptyMessage="No hay trabajadores asociados a las tareas"
 										model="@bind(tarea.listEventPlanTareaTrabajadors)">
 										<auxhead>
-											<auxheader colspan="3"
+											<auxheader colspan="6"
 												align="center" label="TRABAJADORES ASOCIADOS">
 											</auxheader>
 										</auxhead>
 										<columns
 											sclass="header-periodo-disfute">
 											<column label=""
-												width="21%" />
-											<column label="Cédula/Rif"
-												width="29%" />
-
-											<column label="Voluntario"
-												align="center" width="20%" />
-											<column label="Voluntario"
-												align="center" width="20%" />
+													width="10%" />
+												<column
+													label="Cédula/Rif" width="10%" />
+												<column
+													label="Trabajador" align="center" width="30%" />
+												<column label="Correo"
+													align="center" width="20%" />
+												<column label="Teléfono"
+													align="center" width="15%" />
+												<column
+													label="Ejecución" width="15%" align="center">
+												</column>
 
 
 										</columns>
 										<template name="model">
 											<row sclass="last">
 												<cell
-													sclass="vacacion">
-													<label
-														value="@bind(each.fkTrabajador.fkPersona.identificacion)" />
-												</cell>
+														sclass="vacacion">
+														<div
+															align="center">
+															<image
+																src="${m:getUrlWeb(each.fkPersona.fkMultimedia.url)}"
+																width="30px" height="30px" sclass="circle">
+															</image>
+														</div>
+													</cell>
 
-												<cell
-													sclass="vacacion">
-													<label
-														value="@bind(each.fkTrabajador.fkPersona.nombre.concat(' ').concat(each.fkTrabajador.fkPersona.apellido))" />
-												</cell>
-												<cell>
-													<n:div
-														class="switch">
-														<n:label>
-															NO
-															<checkbox
-																checked="@bind(vm.estatus)">
-															</checkbox>
-															SI
-														</n:label>
-													</n:div>
-												</cell>
+													<cell
+														sclass="vacacion">
+														<label
+															value="@bind(each.fkTrabajador.fkPersona.identificacion)" />
+													</cell>
+
+													<cell
+														sclass="vacacion">
+														<label
+															value="@bind(each.fkTrabajador.fkPersona.nombre.concat(' ').concat(each.fkTrabajador.fkPersona.apellido))" />
+													</cell>
+													<cell
+														sclass="vacacion">
+														<label
+															value="@bind(each.fkTrabajador.fkPersona.correo)" />
+													</cell>
+													<cell
+														sclass="vacacion">
+														<label
+															value="@bind(each.fkTrabajador.fkPersona.telefono1)" />
+													</cell>
+													<cell>
+														<n:div
+															class="switch">
+															<n:label
+																style=" font-size: 16px;">
+																NO
+																<checkbox
+																	checked="@bind(each.ejecucion)">
+																</checkbox>
+																SI
+															</n:label>
+														</n:div>
+													</cell>
 											</row>
 										</template>
 									</grid>
