--- a/WebContent/assets/css/web/galeria.css
+++ b/WebContent/assets/css/web/galeria.css
@@ -61,7 +61,7 @@
 	width: 75%;
 }
 
-.seccion .fotos, .seccion .icon {
+.seccion .fotos, .seccion .icon, .seccion .album {
 	text-align: center;
 }
 
