--- a/WebContent/views/web/footer.zul
+++ b/WebContent/views/web/footer.zul
@@ -45,7 +45,7 @@
 									<image src="/imagenes/portal/icon/icon-envelope.png"></image>
 								</div>
 								<div class="col s10">
-									<n:p>fancalara@gmail.com</n:p>
+									<n:p><label value="@load(each.correo)"></label></n:p>
 								</div>
 								<div class="col s2">
 									<span class="fa fa-map-marker fa-2x"></span>
